up: build container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       POSTGRES_DB: shortlink
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./scripts:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
 
@@ -19,7 +20,7 @@ services:
       dockerfile: Dockerfile
     container_name: shortlink-app
     environment:
-      DB_HOST: localhost
+      DB_HOST: db
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: root
