--- a/nginx.conf
+++ b/nginx.conf
@@ -5,8 +5,38 @@ http {
         listen 80;
 
         location / {
-            root /usr/share/nginx/html;
+            root /usr/share/nginx/html/auth;
             index index.html;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /auth/ {
+            alias /usr/share/nginx/html/auth/;
+            index index.html;
+        }
+
+        location /registration/ {
+            alias /usr/share/nginx/html/registration/;
+            index index.html;
+        }
+
+        location /output/ {
+            alias /usr/share/nginx/html/output/;
+            index index.html;
+        }
+
+        location /shorten/ {
+            alias /usr/share/nginx/html/shorten/;
+            index index.html;
+        }
+
+        location /profile/ {
+            alias /usr/share/nginx/html/profile/;
+            index index.html;
+        }
+
+        location /styles/ {
+            alias /usr/share/nginx/html/styles/;
         }
 
         location /api/ {
