--- a/nginx.conf
+++ b/nginx.conf
@@ -6,13 +6,13 @@ http {
 
         location / {
             root /usr/share/nginx/html/auth;
-            index index.html;
-            try_files $uri $uri/ /index.html;
+            index auth.html;
+            try_files $uri $uri/ /auth.html;
         }
 
         location /auth/ {
             alias /usr/share/nginx/html/auth/;
-            index index.html;
+            index auth.html;
         }
 
         location /registration/ {
