--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       - ./scripts:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   app:
 #    restart: unless-stopped
@@ -31,6 +35,10 @@ services:
       - db
     ports:
       - "8000:8000"
+    deploy:
+      resources:
+        limits:
+          memory: 256M
 
   nginx:
     image: nginx
@@ -42,6 +50,10 @@ services:
       - "80:80"
     depends_on:
       - app
+    deploy:
+      resources:
+        limits:
+          memory: 128M
 
 volumes:
   pgdata:
